<resources>
    <string name="app_name">MemoryGame</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="game_fragment_label">Game Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="playButtonText">Play</string>
    <string name="DifficultyText">Difficulty:</string>
    <string name="titleText">Memory Game</string>
    <string name="score">Score: 0</string>
    <string name="tile1_label">1</string>
    <string name="tile5_label">5</string>
    <string name="tile4_label">4</string>
    <string name="tile6_label">6</string>
    <string name="tile3_label">3</string>
    <string name="tile2_label">2</string>
    <string name="backButton">Back</string>

    <string-array name="difficulty_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>