<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4">

    <TextView
        android:id="@+id/text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="#E91E63"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleText"
        android:textColor="#E91E63"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/tile_1"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:text="@string/tile1_label"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/tile_2"
        app:layout_constraintEnd_toStartOf="@+id/tile_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tile_2" />

    <Button
        android:id="@+id/tile_5"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:text="@string/tile5_label"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tile_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tile_4"
        app:layout_constraintTop_toBottomOf="@+id/tile_2"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/tile_4"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:text="@string/tile4_label"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/tile_5"
        app:layout_constraintEnd_toStartOf="@+id/tile_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tile_5"
        app:layout_constraintVertical_bias="0.544" />

    <Button
        android:id="@+id/tile_6"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:text="@string/tile6_label"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/tile_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tile_5"
        app:layout_constraintTop_toTopOf="@+id/tile_5"
        app:layout_constraintVertical_bias="0.566" />

    <Button
        android:id="@+id/tile_3"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:text="@string/tile3_label"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/tile_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tile_2"
        app:layout_constraintTop_toTopOf="@+id/tile_2" />

    <Button
        android:id="@+id/tile_2"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:text="@string/tile2_label"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tile_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tile_1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButton"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tile_5"
        app:layout_constraintVertical_bias="0.811" />
</androidx.constraintlayout.widget.ConstraintLayout>